Basic grid border

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <title>Retro Cycle</title>
     <script src="light-cycle.js"></script>
 </head>
-<body>
+<body style="background: black">
+    <div style="width: 100%; text-align: center; margin: 100px 0 0 0">
+        <canvas id="canvas">y u no use modern browser?</canvas>
+    </div>
 </body>
