Redraw only changed regions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="light-cycle.js"></script>
 </head>
 <body style="background: black">
-    <div style="width: 100%; text-align: center; margin: 100px 0 0 0">
+    <div style="width: 100%; text-align: center">
         <canvas id="canvas">y u no use modern browser?</canvas>
     </div>
 </body>
