--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Retro Cycle</title>
+    <title>Light Cycle Duel</title>
     <script src="light-cycle.js"></script>
 </head>
 <body style="background: black">
