--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Light Cycle Duel</title>
     <script src="light-cycle.js"></script>
+	<script src="webworks-1.0.2.9.js"></script>
 </head>
 <body style="background: black">
     <div style="width: 100%; text-align: center">
